<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.westpac.mad.weatherforecast.MainActivity">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/ButtonText"
            android:onClick="makeRESTRequest"
            android:id="@+id/requestButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/CurrentWeatherTitle"
            android:id="@+id/mainHeading"
            android:textSize="30dp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="45dp"

                android:id="@+id/currentIcon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/currentDetails"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AdditionalInfoTitle"
            android:id="@+id/additionalInfoHeading"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/additionalInfo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DailyForecastButton"
                android:visibility="invisible"
                android:id="@+id/dailyForecastButton"
                android:onClick="launchDailyForecast"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HourlyForecastButton"
                android:visibility="invisible"
                android:id="@+id/hourlyForecastButton"
                android:onClick="launchHourlyForecast"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MinutelyForecastButton"
                android:visibility="invisible"
                android:id="@+id/minutelyForecastButton"
                android:onClick="launchMinutelyForecast"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>